[project]
name = "after-us"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]

[project.scripts]
after-us = "after_us:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
